--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
           />
           <h1 class="text-light"><a href="index.html">Muhammad Ilham</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://www.instagram.com/_milham00/" class="instagram"
+            <a href="https://www.instagram.com/ilhamm.0a" class="instagram"
               ><i class="bx bxl-instagram"></i
             ></a>
-            <a href="https://www.tiktok.com/@_milham00" class="tiktok"
+            <a href="https://www.tiktok.com/@ilhamm.0a" class="tiktok"
               ><i class="bi bi-tiktok"></i
             ></a>
-            <a
-              href="https://www.linkedin.com/in/muhammad-ilham-40814b206/"
-              class="linkedin"
+            <a href="https://www.linkedin.com/in/ilham00/" class="linkedin"
               ><i class="bx bxl-linkedin"></i
             ></a>
-            <a href="https://github.com/milham0A" class="github"
+            <a href="https://github.com/ilham00" class="github"
               ><i class="bi bi-github"></i
             ></a>
           </div>
@@ -341,6 +339,28 @@
             data-aos="fade-up"
             data-aos-delay="100"
           >
+            <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/project/Bug Bounty2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/project/Bug Bounty2.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Private Bug Bounty Program"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a href="project/bugbounty.html" title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-certified">
               <div class="portfolio-wrap">
                 <img
@@ -355,6 +375,30 @@
                     class="portfolio-lightbox"
                     title="Certified Cyber Security Analyst [C3SA]"
                     ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-rewards">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/TSA - CyberChampion.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/TSA - CyberChampion.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="TSA - Cyber Champion"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a
+                    href="certificate-reward/tsa-cyber.html"
+                    title="More Details"
+                    ><i class="bx bx-link"></i
                   ></a>
                 </div>
               </div>
@@ -947,7 +991,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-course">
+            <div
+              class="col-lg-4 col-md-6 portfolio-item filter-course filter-project"
+            >
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/course/JWD-1.png"
@@ -1097,6 +1143,25 @@
                     href="certificate-reward/narasumber.html"
                     title="More Details"
                     ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-certified">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/certified/NSE 1.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/certified/NSE 1.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="NSE Certification Program "
+                    ><i class="bx bx-plus"></i
                   ></a>
                 </div>
               </div>
