--- a/project/bugbounty.html
+++ b/project/bugbounty.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>HoF Reward | Muhammad Ilham</title>
+    <title>Project | Muhammad Ilham</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -122,10 +122,10 @@
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <h2>HoF Details</h2>
+            <h2>Project Details</h2>
             <ol>
               <li><a href="../index.html">Home</a></li>
-              <li>HoF Details</li>
+              <li>Project Details</li>
             </ol>
           </div>
         </div>
@@ -139,8 +139,12 @@
             <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
-                  <div class="">
-                    <img src="../assets/img/portfolio/nasa.jpg" alt="" />
+                  <div class="swiper-slide">
+                    <img src="../assets/img/project/Bug Bounty.jpg" alt="" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/project/Bug Bounty2.jpg" alt="" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -149,32 +153,19 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Bug Bounty Hunter</h3>
+                <h3>Bug Bounty Program</h3>
                 <ul>
-                  <li>
-                    <strong>Category</strong>: VDP (Vulnerability Disclosure
-                    Program)
-                  </li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 23 Agustus 2023</li>
-                  <li>
-                    <strong>URL</strong>:
-                    <a
-                      href="https://bugcrowd.com/nasa-vdp/hall-of-fame"
-                      target="_blank"
-                      >Hall of Fame - Nasa VDP</a
-                    >
-                  </li>
+                  <li><strong>Category</strong>: Private</li>
+                  <li><strong>Date</strong>: Desember 2024 - Januari 2025</li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>Detail</h2>
                 <p>
-                  Menjadi salah satu penemu kerentanan dalam VDP (Vulnerability
-                  Disclosure Program) yang diselenggarakan oleh NASA. Saya
-                  menemukan kerentanan (Confidential) dengan Severity P5 atau
-                  Informasional dan saya masuk ke VDP Hall of Fame NASA yang
-                  bisa di lihat di url diatas.
+                  Sebelum mengakhiri tahun 2024, saya mendapatkan tawaran untuk
+                  menjadi Bug Hunter pada Private Bug Bounty. Saya berhasil
+                  menemukan beberapa kerentanan dan membuat laporan tentang
+                  kerentanan yang saya temukan.
                 </p>
               </div>
             </div>
