--- a/certificate-course/jna.html
+++ b/certificate-course/jna.html
@@ -62,24 +62,22 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img
-            src="../assets/img/profile-ilham.jpg"
+            src="../assets/img/foto.jpg"
             alt=""
             class="img-fluid rounded-circle"
           />
           <h1 class="text-light"><a href="../index.html">Muhammad Ilham</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://www.instagram.com/_milham00/" class="instagram"
+            <a href="https://www.instagram.com/ilhamm.0a" class="instagram"
               ><i class="bx bxl-instagram"></i
             ></a>
-            <a href="https://www.tiktok.com/@_milham00" class="tiktok"
+            <a href="https://www.tiktok.com/@ilhamm.0a" class="tiktok"
               ><i class="bi bi-tiktok"></i
             ></a>
-            <a
-              href="https://www.linkedin.com/in/muhammad-ilham-40814b206/"
-              class="linkedin"
+            <a href="https://www.linkedin.com/in/ilham00" class="linkedin"
               ><i class="bx bxl-linkedin"></i
             ></a>
-            <a href="https://github.com/milham0A" class="github"
+            <a href="https://github.com/ilham0A" class="github"
               ><i class="bi bi-github"></i
             ></a>
           </div>
