--- a/certificate-reward/tsa-cyber.html
+++ b/certificate-reward/tsa-cyber.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>HoF Reward | Muhammad Ilham</title>
+    <title>Certificate Reward | Muhammad Ilham</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -122,10 +122,10 @@
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <h2>HoF Details</h2>
+            <h2>Reward Details</h2>
             <ol>
               <li><a href="../index.html">Home</a></li>
-              <li>HoF Details</li>
+              <li>Reward Details</li>
             </ol>
           </div>
         </div>
@@ -139,8 +139,25 @@
             <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
-                  <div class="">
-                    <img src="../assets/img/portfolio/nasa.jpg" alt="" />
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/portfolio/TSA - CyberChampion.jpg"
+                      alt=""
+                    />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/portfolio/TSA - CyberChampion 2.jpg"
+                      alt=""
+                    />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img
+                      src="../assets/img/portfolio/TSA - CyberChampion 3.jpeg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -149,32 +166,27 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Bug Bounty Hunter</h3>
+                <h3>Capture The Flag [CTF]</h3>
                 <ul>
-                  <li>
-                    <strong>Category</strong>: VDP (Vulnerability Disclosure
-                    Program)
-                  </li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 23 Agustus 2023</li>
-                  <li>
-                    <strong>URL</strong>:
-                    <a
-                      href="https://bugcrowd.com/nasa-vdp/hall-of-fame"
-                      target="_blank"
-                      >Hall of Fame - Nasa VDP</a
-                    >
-                  </li>
+                  <li><strong>Category</strong>: Competition</li>
+                  <li><strong>Date</strong>: 9 - 10 November 2024</li>
+                  <!-- <li>
+                    <strong>Project URL</strong>:
+                    <a href="#">www.example.com</a>
+                  </li> -->
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>Detail</h2>
                 <p>
-                  Menjadi salah satu penemu kerentanan dalam VDP (Vulnerability
-                  Disclosure Program) yang diselenggarakan oleh NASA. Saya
-                  menemukan kerentanan (Confidential) dengan Severity P5 atau
-                  Informasional dan saya masuk ke VDP Hall of Fame NASA yang
-                  bisa di lihat di url diatas.
+                  Beberapa waktu yang lalu saya bersama rekan saya Reinaldy
+                  Putra Simanullang berpartisipasi dalam kompetisi Capture The
+                  Flag (CTF) yang diadakan oleh Digital Talent Scholarship TSA -
+                  Cyber Champion (Talent Scouting Academy). <br />
+                  Walau hanya mendapatkan peringkat ke-23, tapi ini merupakan
+                  pengalaman yang berharga karena bisa meningkatkan skill dan
+                  menambah relasi dengan orang lain yang memiliki minat dibidang
+                  Cyber Security.
                 </p>
               </div>
             </div>
