--- a/certificate-reward/3second.html
+++ b/certificate-reward/3second.html
@@ -140,15 +140,24 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img src="../assets/img/portfolio/3second.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Certificate of Appreciation - 3second.jpg"
+                      alt=""
+                    />
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="../assets/img/portfolio/3second-2.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Swag - 3second.jpg"
+                      alt=""
+                    />
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="../assets/img/portfolio/3second-3.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Swag - 3second2.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -160,8 +169,8 @@
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 23 Maret 2023</li>
+                  <li><strong>Bug</strong>: Broken Authentication</li>
+                  <li><strong>Date</strong>: Maret 2023</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -172,9 +181,11 @@
                 <h2>Detail</h2>
                 <p>
                   Pada bulan maret tahun 2023 saya berhasil menemukan kerentanan
-                  atau bug pada website milik 3second. Lalu saya melaporkan
-                  kerentanan tersebut ke pihak 3second dan mereka memberikan
-                  saya reward berupa gift dan sertifikat digital.
+                  atau bug pada website milik 3second. Melalui kerentanan
+                  tersebut bisa membuat saya mengambil akun orang lain. Lalu
+                  saya melaporkan kerentanan tersebut ke pihak 3second dan
+                  mereka memberikan saya reward berupa gift dan sertifikat
+                  digital.
                 </p>
               </div>
             </div>
