--- a/certificate-reward/aguna_course.html
+++ b/certificate-reward/aguna_course.html
@@ -139,16 +139,9 @@
             <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
-                  <div class="swiper-slide">
+                  <div class="">
                     <img
-                      src="../assets/img/portfolio/Certificate of Appreciation - akupintar.jpg"
-                      alt=""
-                    />
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/portfolio/Swag - akupintar.jpg"
+                      src="../assets/img/portfolio/Certificate of Appreciation - Aguna Course.jpg"
                       alt=""
                     />
                   </div>
@@ -161,9 +154,9 @@
               <div class="portfolio-info">
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
-                  <li><strong>Category</strong>: BBP (Bug Bounty Program)</li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 29 Mei 2023</li>
+                  <li><strong>Category</strong>: Volunteer</li>
+                  <li><strong>Bug</strong>: Rate Limit</li>
+                  <li><strong>Date</strong>: 29 September 2022</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -173,11 +166,10 @@
               <div class="portfolio-description">
                 <h2>Detail</h2>
                 <p>
-                  Pada bulan Mei tahun 2023 saya berpartisipasi dalam program
-                  Bug Bounty yang diadakan oleh akupintar.id. Saya berhasil
-                  menemukan kerentanan dan melaporkan kerentanan tersebut ke
-                  pihak akupintar dan mereka memberikan saya reward berupa gift
-                  dan sertifikat digital.
+                  Pada bulan September tahun 2022 saya berhasil menemukan
+                  kerentanan atau bug pada domain website milik Aguna Course.
+                  Lalu saya melaporkan kerentanan tersebut ke pihak Aguna Coure
+                  dan mereka memberikan saya reward berupa sertifikat Apresiasi.
                 </p>
               </div>
             </div>
