--- a/certificate-reward/daerah-istimewa-yogyakarta.html
+++ b/certificate-reward/daerah-istimewa-yogyakarta.html
@@ -140,7 +140,10 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/DIY.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Certificate of Appreciation - Daerah Istimewa Yogyakarta.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -153,7 +156,7 @@
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
                   <li><strong>Bug</strong>: Exposed git</li>
-                  <li><strong>Date</strong>: 22 September 2023</li>
+                  <li><strong>Date</strong>: September 2023</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
