--- a/certificate-reward/institut-teknologi-bandung.html
+++ b/certificate-reward/institut-teknologi-bandung.html
@@ -141,7 +141,7 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
                     <img
-                      src="../assets/img/portfolio/itb_sertifikat.jpg"
+                      src="../assets/img/portfolio/Certificate of Appreciation - itb.jpg"
                       alt=""
                     />
                   </div>
@@ -156,7 +156,7 @@
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
                   <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 7 Februari 2024</li>
+                  <li><strong>Date</strong>: Februari 2024</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
