--- a/certificate-reward/kementerian-kesehatan.html
+++ b/certificate-reward/kementerian-kesehatan.html
@@ -141,7 +141,7 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
                     <img
-                      src="../assets/img/portfolio/Muhammad Ilham_sign.png"
+                      src="../assets/img/portfolio/Certificate of Appreciation - Kemkes.png"
                       alt=""
                     />
                   </div>
@@ -156,7 +156,7 @@
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
                   <li><strong>Bug</strong>: Sensitive Data Exposure</li>
-                  <li><strong>Date</strong>: 10 Januari 2024</li>
+                  <li><strong>Date</strong>: Januari 2024</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
