--- a/certificate-reward/komisi-yudisial.html
+++ b/certificate-reward/komisi-yudisial.html
@@ -140,7 +140,7 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/ky.jpg" alt="" />
+                    <img src="../assets/img/portfolio/Swag - Komisi Yudisial.jpg" alt="" />
                   </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -151,8 +151,8 @@
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 29 September 2023</li>
+                  <li><strong>Bug</strong>: XSS</li>
+                  <li><strong>Date</strong>: September 2023</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
