--- a/certificate-reward/lampungprov.html
+++ b/certificate-reward/lampungprov.html
@@ -139,16 +139,9 @@
             <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
-                  <div class="swiper-slide">
+                  <div class="">
                     <img
-                      src="../assets/img/portfolio/Certificate of Appreciation - akupintar.jpg"
-                      alt=""
-                    />
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img
-                      src="../assets/img/portfolio/Swag - akupintar.jpg"
+                      src="../assets/img/portfolio/Certificate of apreciation - LampungProv.jpg"
                       alt=""
                     />
                   </div>
@@ -161,23 +154,19 @@
               <div class="portfolio-info">
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
-                  <li><strong>Category</strong>: BBP (Bug Bounty Program)</li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 29 Mei 2023</li>
-                  <!-- <li>
-                    <strong>Project URL</strong>:
-                    <a href="#">www.example.com</a>
-                  </li> -->
+                  <li><strong>Category</strong>: Volunteer</li>
+                  <li><strong>Bug</strong>: Sensitive Data Exposure</li>
+                  <li><strong>Date</strong>: Juli 2023</li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>Detail</h2>
                 <p>
-                  Pada bulan Mei tahun 2023 saya berpartisipasi dalam program
-                  Bug Bounty yang diadakan oleh akupintar.id. Saya berhasil
-                  menemukan kerentanan dan melaporkan kerentanan tersebut ke
-                  pihak akupintar dan mereka memberikan saya reward berupa gift
-                  dan sertifikat digital.
+                  Pada bulan Agustus tahun 2023 saya berhasil menemukan
+                  kerentanan atau bug pada salah satu subdomain website milik
+                  Pemerintah Provinsi Lampung. Lalu saya melaporkan kerentanan
+                  tersebut ke pihak Terkait dan mereka memberikan saya reward
+                  berupa sertifikat Apresiasi.
                 </p>
               </div>
             </div>
