--- a/certificate-reward/sociabuzz.html
+++ b/certificate-reward/sociabuzz.html
@@ -140,7 +140,10 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/sociabuzz.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Certificate of Appreciation - sociabuzz.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -152,8 +155,8 @@
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 12 Desember 2022</li>
+                  <li><strong>Bug</strong>: Rate Limit</li>
+                  <li><strong>Date</strong>: Desember 2022</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
