--- a/certificate-reward/universitas-brawijaya.html
+++ b/certificate-reward/universitas-brawijaya.html
@@ -140,7 +140,10 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/UB.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Certificate of Apreciation - Brawijaya University.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -152,12 +155,8 @@
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
-                  <li><strong>Bug</strong>: Confidential</li>
-                  <li><strong>Date</strong>: 24 Oktober, 2023</li>
-                  <!-- <li>
-                    <strong>Project URL</strong>:
-                    <a href="#">www.example.com</a>
-                  </li> -->
+                  <li><strong>Bug</strong>: Sensitive Data Exposure</li>
+                  <li><strong>Date</strong>: Oktober 2023</li>
                 </ul>
               </div>
               <div class="portfolio-description">
