--- a/hof-reward/hof-nasa.html
+++ b/hof-reward/hof-nasa.html
@@ -140,7 +140,10 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/nasa.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Hall of Fame - nasa.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -160,7 +163,7 @@
                   <li>
                     <strong>URL</strong>:
                     <a
-                      href="https://bugcrowd.com/nasa-vdp/hall-of-fame"
+                      href="https://bugcrowd.com/engagements/nasa-vdp/hall_of_fames"
                       target="_blank"
                       >Hall of Fame - Nasa VDP</a
                     >
