--- a/hof-reward/ubharajaya.html
+++ b/hof-reward/ubharajaya.html
@@ -140,10 +140,16 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img src="../assets/img/portfolio/ubharajaya1.png" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Hall of Fame - ubharajaya.png"
+                      alt=""
+                    />
                   </div>
                   <div class="swiper-slide">
-                    <img src="../assets/img/portfolio/ubharajaya2.png" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Hall of Fame - ubharajaya2.png"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -155,8 +161,11 @@
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
-                  <li><strong>Bug</strong>: DotGit Exposure</li>
-                  <li><strong>Date</strong>: 04 Januari 2024</li>
+                  <li>
+                    <strong>Bug</strong>: Information Disclosure. Sensitive Data
+                    Exposure [Exposed .git]
+                  </li>
+                  <li><strong>Date</strong>: Januari 2024</li>
                   <li>
                     <strong>URL</strong>:
                     <a
