--- a/certificate-reward/dki-jakarta.html
+++ b/certificate-reward/dki-jakarta.html
@@ -140,7 +140,10 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/DKI-jakarta.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Certificate of Appreciation - DKI-jakarta.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -152,7 +155,7 @@
                 <h3>Bug Bounty Hunter</h3>
                 <ul>
                   <li><strong>Category</strong> : Volunteer</li>
-                  <li><strong>Bug</strong> : Confidential</li>
+                  <li><strong>Bug</strong> : XSS</li>
                   <li><strong>Date</strong> : 24 Oktober 2022</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
