--- a/certificate-reward/kemenkumham.html
+++ b/certificate-reward/kemenkumham.html
@@ -139,7 +139,10 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="">
-                    <img src="../assets/img/portfolio/kumham.jpg" alt="" />
+                    <img
+                      src="../assets/img/portfolio/Certificate of Appreciation - kumham.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -152,7 +155,7 @@
                 <ul>
                   <li><strong>Category</strong>: Volunteer</li>
                   <li><strong>Bug</strong>: Sensitive Data Exposure</li>
-                  <li><strong>Date</strong>: 30 Mei 2023</li>
+                  <li><strong>Date</strong>: Mei 2023</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
