--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
                       <strong>Email:</strong>
                       <span>muhammadilhamtester@gmail.com</span>
                     </li>
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Blog:</strong>
+                      <a
+                        href="https://medium.com/@ilhamm0a"
+                        style="
+                          color: black;
+                          text-decoration: none;
+                          border-bottom: 2px solid blue;
+                        "
+                        ><span>medium.com/@ilhamm0a</span></a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
