--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
                       <i class="bi bi-chevron-right"></i>
                       <strong>Blog:</strong>
                       <a
-                        href="https://medium.com/@ilhamm0a"
+                        href="https://ilhamm0a.medium.com/"
                         style="
                           color: black;
                           text-decoration: none;
                           border-bottom: 2px solid blue;
                         "
-                        ><span>medium.com/@ilhamm0a</span></a
+                        ><span>ilhamm0a.medium.com/</span></a
                       >
                     </li>
                   </ul>
