--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                           text-decoration: none;
                           border-bottom: 2px solid blue;
                         "
-                        ><span>ilhamm0a.medium.com/</span></a
+                        ><span>ilhamm0a.medium.com</span></a
                       >
                     </li>
                   </ul>
