--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Blog:</strong>
+                      <strong>Bug Bounty WriteUp:</strong>
                       <a
                         href="https://ilhamm0a.medium.com/"
                         style="
