--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </li>
             <li>
               <a href="#portfolio" class="nav-link scrollto"
-                ><i class="bi bi-card-text"></i> <span>Certificate</span></a
+                ><i class="bi bi-card-text"></i> <span>Achievements</span></a
               >
             </li>
             <li>
@@ -206,120 +206,11 @@
       <br /><br />
       <!-- End About Section -->
 
-      <!-- ======= Resume Section ======= -->
-      <section id="resume" class="resume">
-        <div class="container section-bg">
-          <div class="section-title">
-            <h2>Experiences</h2>
-          </div>
-          <div class="row">
-            <div class="col-lg-6" data-aos="fade-up">
-              <div class="resume-item">
-                <h4>Bug Hunter</h4>
-                <h5>Jan 2023 - Saat ini</h5>
-                <h5>Pekerja Lepas</h5>
-                <ul>
-                  <li>
-                    Berhasil mengidentifikasi dan melaporkan kerentanan keamanan
-                    kritis di berbagai platform, yang menghasilkan imbalan dalam
-                    bentuk kompensasi uang, sertifikat penghargaan, dan
-                    dimasukkan dalam Hall of Fame organisasi.
-                  </li>
-                  <li>
-                    Diundang untuk berpartisipasi dalam private program bug
-                    bounty yang eksklusif, yang menunjukkan tingkat kepercayaan
-                    dan pengakuan yang tinggi dalam komunitas keamanan siber.
-                  </li>
-                  <li>
-                    Mahir dalam memanfaatkan alat seperti Burp Suite, OWASP ZAP,
-                    dan teknik pengujian manual untuk mengungkap masalah
-                    berdampak besar.
-                  </li>
-                </ul>
-              </div>
-              <div class="resume-item">
-                <h4>Penetration Tester</h4>
-                <h5>Jan 2024 - Feb 2024</h5>
-                <h5>Pekerja Lepas</h5>
-                <p>Secure Code Network</p>
-                <ul>
-                  <li>
-                    Berkolaborasi dengan tim proyek untuk melaksanakan pengujian
-                    penetrasi kotak hitam, memastikan hasil yang menyeluruh dan
-                    akurat.
-                  </li>
-                  <li>
-                    Berkontribusi dalam pembuatan laporan akhir pengujian
-                    penetrasi dengan mengumpulkan seluruh temuan yang telah
-                    memperhitungkan tingkat risiko.
-                  </li>
-                  <li>
-                    belajar banyak ilmu baru tentang keamanan aplikasi web,
-                    menunjukkan kemampuan dan dedikasi untuk belajar di bidang
-                    keamanan siber
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <div class="resume-item">
-                <h4>VVIP Program - Badan Siber dan Sandi Negara</h4>
-                <h5>Fep 2024 - Apr 2024</h5>
-                <p>Voluntary Bug Hunter</p>
-                <ul>
-                  <li>
-                    Berpartisipasi dalam Program VVIP BSSN, sebuah inisiatif
-                    Badan Siber dan Sandi Negara (BSSN) yang bertujuan untuk
-                    mendeteksi kerentanan dan membantu organisasi dalam
-                    mengamankan sistem elektronik mereka.
-                  </li>
-                  <li>
-                    Melakukan penilaian kerentanan pada aplikasi web dalam
-                    lingkup tertentu untuk mengidentifikasi celah keamanan.
-                  </li>
-                  <li>
-                    Memperoleh sertifikat partisipasi, yang menunjukkan komitmen
-                    dan kontribusi terhadap upaya keamanan siber nasional.
-                  </li>
-                </ul>
-                <p>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Klik untuk melihat :</strong>
-                  <li>
-                    <a
-                      href="certificate-reward/vvipbssn.html"
-                      style="
-                        color: black;
-                        text-decoration: none;
-                        border-bottom: 2px solid blue;
-                      "
-                      ><span>Provinsi Jatim</span></a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="certificate-reward/vvipbssn2.html"
-                      style="
-                        color: black;
-                        text-decoration: none;
-                        border-bottom: 2px solid blue;
-                      "
-                      ><span>Kabupaten Kulon Progo</span></a
-                    >
-                  </li>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Resume Section -->
-
       <!-- ======= Portfolio Section ======= -->
       <section id="portfolio" class="portfolio">
-        <div class="container">
+        <div class="container section-bg">
           <div class="section-title">
-            <h2>Certificates</h2>
+            <h2>Achievements</h2>
           </div>
 
           <div class="row" data-aos="fade-up">
@@ -1390,7 +1281,7 @@
 
       <!-- ======= Contact Section ======= -->
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact section-bg">
+      <section id="contact" class="contact">
         <div class="container">
           <div class="section-title">
             <h2>CONTACT</h2>
